# file-finder-tauri

.claude/: settings.local.json
file-finder/: .gitignore  BUILD_INSTRUCTIONS.md  LLM_SETUP.md  PRODUCTION_READY.md  README.md  WINDOWS_SETUP.md  package.json  test_llm_queries.rs
file-finder/.github/workflows/: build.yml
file-finder/src/: index.html  main.js  styles.css
file-finder/src-tauri/: Cargo.toml  tauri.conf.json
file-finder/src-tauri/src/: fzf_search.rs  intelligent_categorizer.rs  lib.rs  llm_integration.rs  llm_query_processor.rs  main.rs  semantic_indexer.rs  simple_search.rs  simple_search_command.rs
