[package]
name = "file-finder"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "file_finder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
fuzzy-matcher = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
opener = "0.7"
regex = "1.10"
rayon = "1.10"
# LLM Integration
reqwest = { version = "0.11", features = ["json"] }

